--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="assets/css/styles.css" />
+		<link rel="stylesheet" href="assets/css/style.css" />
 		<title>Dark mode and Light Mode</title>
 	</head>
 	<body>
@@ -13,7 +13,7 @@
 			<button aria-label="selecionar-modo" id="mode-selector">Dark Mode</button>
 		</main>
 
-		<footer>Basecamp Javascript @ Digital Innovation One</footer>
-		<script src="assets/js/scripts.js"></script>
+		<footer>Basecamp Javascript @ Digital Innovation One <br> Developed by: leoziz</footer>
+		<script src="assets/js/script.js"></script>
 	</body>
 </html>
