Arquivo criado para testes em navegador
Arquivo HTML feito para possibilitar os testes propostos no console do navegador.

--- a/orientacao-a-objetos/index.html
+++ b/orientacao-a-objetos/index.html
@@ -1,8 +1,13 @@
-<html>
-	<head>
-		Teste Conta Bancária
-	</head>
-	<body>
-		<script src="ContaBancaria.js"></script>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Teste OOJS</title>
+</head>
+<body>
+	<script src="contaBancaria.js"></script>
+	<!--Index feito apenas para testes no console do navegador-->
+</body>
 </html>
