--- a/introducao-ao-javascript/contador/index.html
+++ b/introducao-ao-javascript/contador/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Olá, mundo!</h1>
-    <p>Este é o meu primeiro projeto Javascript.</p>
+    <p>Este é um simples contador utilizando Javascript.</p>
     <div id="counter">
         <button name="subtrair" onclick="decrement()">-</button>
         <span id="currentNumber">0</span>
